--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -23,7 +23,8 @@ en:
         subject: "Reset password instructions"
       unlock_instructions:
         subject: "Unlock Instructions"
-      signed_up: "Welcome! You have signed up successfully."
+      signed_up:
+        subject: "Welcome! You have signed up successfully."
     omniauth_callbacks:
       failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
       success: "Successfully authenticated from %{kind} account."
